@@ -6,15 +6,14 @@ import org.opentripplanner.graph_builder.services.GraphBuilderModule;
 import org.opentripplanner.routing.core.TraverseMode;
 import org.opentripplanner.routing.core.TraverseModeSet;
 import org.opentripplanner.routing.edgetype.StreetBikeParkLink;
-import org.opentripplanner.routing.edgetype.StreetVehicleRentalLink;
 import org.opentripplanner.routing.edgetype.StreetTransitStopLink;
 import org.opentripplanner.routing.edgetype.StreetTransitEntranceLink;
 import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.vertextype.BikeParkVertex;
-import org.opentripplanner.routing.vertextype.VehicleRentalStationVertex;
 import org.opentripplanner.routing.vertextype.TransitEntranceVertex;
 import org.opentripplanner.routing.vertextype.TransitStopVertex;
 import org.opentripplanner.util.OTPFeature;
+import org.opentripplanner.util.ProgressTracker;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -44,7 +43,7 @@ public class StreetLinkerModule implements GraphBuilderModule {
   }
 
   public List<String> getPrerequisites() {
-    return Arrays.asList("streets"); // don't include transit, because we also link P+Rs and bike rental stations,
+    return List.of("streets"); // don't include transit, because we also link P+Rs and bike rental stations,
     // which you could have without transit. However, if you have transit, this module should be run after it
     // is loaded.
   }
@@ -65,15 +64,22 @@ public class StreetLinkerModule implements GraphBuilderModule {
     graph.calculateConvexHull();
   }
 
-  private void linkTransitStops(Graph graph) {
-    LOG.info("Linking transit stops to graph...");
-    for (TransitStopVertex tStop : graph.getVerticesOfType(TransitStopVertex.class)) {
+
+  public void linkTransitStops(Graph graph) {
+    List<TransitStopVertex> vertices = graph.getVerticesOfType(TransitStopVertex.class);
+    var progress = ProgressTracker.track("Linking transit stops to graph", 5000, vertices.size());
+    LOG.info(progress.startMessage());
+
+    for (TransitStopVertex tStop : vertices) {
 
       // Stops with pathways do not need to be connected to the street network, since there are explicit entraces defined for that
       if (tStop.hasPathways()) {
         continue;
       }
-
+      // check if stop is already linked, to allow multiple linking cycles
+      if (tStop.getDegreeOut() + tStop.getDegreeIn() > 0) {
+        continue;
+      }
       TraverseModeSet modes = new TraverseModeSet(TraverseMode.WALK);
 
       if (OTPFeature.FlexRouting.isOn()) {
@@ -93,7 +99,10 @@ public class StreetLinkerModule implements GraphBuilderModule {
               new StreetTransitStopLink(streetVertex, (TransitStopVertex) vertex)
           )
       );
+      //noinspection Convert2MethodRef
+      progress.step(m -> LOG.info(m));
     }
+    LOG.info(progress.completeMessage());
   }
 
   private void linkTransitEntrances(Graph graph) {
@@ -112,6 +121,11 @@ public class StreetLinkerModule implements GraphBuilderModule {
   }
 
   private void linkBikeParks(Graph graph) {
+    // If bike parks have already been linked on the previous round, skip them
+    if (graph.hasLinkedBikeParks) {
+      LOG.info("Bike parks have already been linked to the graph, skipping.");
+      return;
+    }
     LOG.info("Linking bike parks to graph...");
     // It is enough to have the edges traversable by foot, as you can walk with the bike if necessary
     for (BikeParkVertex bikePark : graph.getVerticesOfType(BikeParkVertex.class)) {
@@ -125,6 +139,7 @@ public class StreetLinkerModule implements GraphBuilderModule {
           )
       );
     }
+    graph.hasLinkedBikeParks = true;
   }
 
   @Override
